2010-12-31  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-methods): Add recursive options to "scpc",
	"scpx", "pscp" and "psftp".

2010-12-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-action-password, tramp-process-actions): Revert
	patch from 2010-12-08.  Use `save-restriction'.

2010-12-08  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-start-file-process): Protect
	buffer-modified value.  (Bug#7557)
	(tramp-action-password): Delete region, do not narrow.
	(tramp-process-actions): Do not widen.

2010-11-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-default-method-alist)
	(tramp-default-user-alist, tramp-default-proxies-alist):
	Adapt custom options type.  (Bug#7445)

2010-11-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-remote-coding-commands): Add an alternative
	using "base64 -d -i".  This is needed for older base64 versions
	from GNU coreutils.  Reported by Klaus Reichl
	<Klaus.Reichl@thalesgroup.com>.

2010-11-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-insert-file-contents): Do not set
	`permanent-local' property for `backup-by-copying-when-mismatch'.

2010-10-30  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-insert-file-contents): For root, preserve
	owner and group when editing files.  (Bug#7289)

2010-10-28 Glenn Morris <rgm@gnu.org>

	* tramp-fish.el: Update URL in comment (viewcvs -> viewvc).

2010-10-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-get-inline-coding): Return `nil' in case of
	errors.

2010-10-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-do-file-attributes-with-stat)
	(tramp-do-directory-files-and-attributes-with-stat): Use "e0" in
	order to make stat results a float.  Patch by Andreas Schwab
	<schwab@linux-m68k.org>.

2010-10-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-open-connection-setup-interactive-shell):