@@ -1,3 +1,8 @@
+2011-01-10  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-default-method): Initialize with pscp/plink only
+	when running under W32.
+
 2010-12-31  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-methods): Add recursive options to "scpc",
